<resources>
    <string name="app_name">Bouncer</string>
    <string name="activity_name_menu">Menu</string>
    <string name="activity_name_bouncer">Bouncer</string>
    <string name="activity_name_manager">Manager</string>
    <string name="activity_name_juicer">Juicer</string>
    <string name="activity_name_lku_manager">LKU Manager</string>
    <string name="activity_name_lku_booker">LKU Booker</string>
    <string name="activity_name_turing">Turing</string>
    <string name="activity_name_zwegat">Zwegat</string>
    <string name="dps">Dps</string>
    <string name="not_defined">Not defined</string>
    <string name="phone">Phone</string>
    <string name="model">Model</string>
    <string name="oBattery">Battery</string>
    <string name="shape">Shape</string>
    <string name="color">Color</string>
    <string name="producer">Producer</string>
    <string name="hint_scan">Scan..</string>
    <string name="hint_model_name">Enter model name..</string>
    <string name="hint_battery_name">Search here for battery..</string>
    <string name="missing_input">Missing input</string>
    <string name="selection_result">Result of selection</string>
    <string name="reuse">Reuse</string>
    <string name="recycling">Recycling</string>
    <string name="lku">LKU</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="summary">Summary</string>
    <string name="new_selection">Start new selection</string>
    <string name="undo">Undo</string>
    <string name="added_to">Added to:</string>
    <string name="add_battery">Add %1$s to batteries?</string>
    <string name="hint_enter_battery_name">Search here for battery..</string>
    <string name="broken">Broken</string>
    <string name="shape_broken">Broken</string>
    <string name="ok">Ok</string>
    <string name="shape_repair">Repair</string>
    <string name="shape_acceptable">Acceptable</string>
    <string name="shape_good">Good</string>
    <string name="shape_very_good">Very Good</string>
    <string name="shape_cherry">Cherry</string>
    <string name="collector">Collector</string>
    <string name="total">Total</string>
    <string name="name">Name</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="oManufacturer">Manufacturer</string>
    <string name="oCharger">Charger</string>
    <string name="toast_model_has_lku">Wolfram was machst du da? Das Model hat doch schon eine LKU. </string>
    <string name="default_exploitation">Exploitation</string>
    <string name="destination">Destination</string>
    <string name="oStation">Station</string>
    <string name="model_name">Model-Name</string>
    <string name="color_erp">Color ERP</string>
    <string name="color_wawi">Color WAWI</string>
    <string name="is_lku_filled">Is LKU space full? </string>
    <string name="device_written_off">Device is written off</string>
    <string name="device_stored_lku">Device is stored in LKU Stock - Wait for lable..</string>
    <string name="device_stored_excess_stock">Device is stored in Excess Stock - Wait for lable..</string>
    <string name="booked">Booked</string>
    <string name="booked_out">Booked out</string>
    <string name="book">Book into LKU Stock (Tap for yes)</string>
    <string name="book_out">Book out of LKU Stock</string>
    <string name="suggested_lku">Suggested LKU: </string>
    <string name="suggested">Suggested - </string>
    <string name="Stock">Stock: </string>
    <string name="Lku">Lku: </string>
    <string name="lku_booked_in">Booked</string>
    <string name="space_full">Space full</string>
    <string name="cancel">Cancel</string>
    <string name="printer_head_open">Head of printer is open</string>
    <string name="printer_paused">Printer is paused</string>
    <string name="printer_paper_out">Printer paper is out</string>
    <string name="dialog_fragment_total_reset_title">Are you sure that you want to reset the counter?</string>
    <string name="device_does_not_exist">Device does not exist</string>
    <string name="item_device_id">Device Id: </string>
    <string name="item_lku_id">LKU Id: </string>
    <string name="condition">Condition</string>
    <string name="id_model_color_shape">id</string>
    <string name="id_color">id_color</string>
    <string name="id_shape">id_shape</string>
    <string name="rpd">rpd</string>
    <string name="et_hint_color_name">Enter color name...</string>
    <string name="et_hint_hex">Enter hex code...</string>
    <string name="no_manufacturer_selected">No oManufacturer selected</string>
    <string name="no_model_selected">No model selected</string>
    <string name="commit">Commit</string>
    <string name="finish">Finish</string>
    <string name="delete">Delete</string>
    <string name="pause">Pause</string>
    <string name="new_record">New record</string>
    <string name="existing_record">Existing record</string>
    <string name="unknown_sourc">Unknown Source</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="enter_collector">Enter collector...</string>
    <string name="id">Id</string>
    <string name="date_last_update">Last update</string>
    <string name="date_creation">Date creation</string>
    <string name="account_holder">Accountholder</string>
    <string name="iban">Iban</string>
    <string name="payment">Payment</string>
    <string name="please_select_collector">Please select collector</string>
    <string name="ready_to_bounce">Ready to bounce!</string>
    <string name="missing_color_information">Please enter color name and hex</string>
    <string name="bouncer_imei_exists">We already have a device with this IMEI in our system. Therefore you can skip this one.</string>
    <string name="tab_turing_one">Summary</string>
    <string name="tab_turing_two">Error model</string>
    <string name="tab_turing_three">Error color</string>
    <string name="flush">Flush</string>
    <string name="selection">Selection</string>
    <string name="id_device">Id-Device</string>
    <string name="position">Position</string>
    <string name="click_for_front_picture">Please click to take front picture (Long Click for skipping)</string>
    <string name="toast_request_permission_camera">Please permit camera usage.</string>
    <string name="click_for_back_picture">Click for back picture (Long Click for skipping)</string>
    <string name="battery">Battery</string>
    <string name="unknown">-</string>
    <string name="charger">Charger</string>
    <string name="doubleModel">Double Models</string>
    <string name="devices_no_model_color_shape_lku">Devices without model, color, shape in Lku</string>
    <string name="id_model">ID Model</string>
    <string name="name_model">Name Model</string>
    <string name="name_stock">Name Stock</string>
    <string name="id_lku">ID Lku</string>
    <string name="multiple_model">Multiple Model</string>
    <string name="merge">Merge</string>
    <string name="name_collector">Name collector</string>
    <string name="id_collector">Collector</string>
    <string name="id_shipping_record">Shipping record</string>
    <string name="number_box">#</string>
    <string name="id_bricolage">Bricolage</string>
    <string name="number_bricolage">#</string>
    <string name="id_flyer">Flyer</string>
    <string name="number_flyer">#</string>
    <string name="id_poster">Poster</string>
    <string name="number_poster">#</string>
    <string name="id_tracking">Tracking</string>
    <string name="shipping_status">Status</string>
    <string name="marketing_shipping_records_not_sent">Marketing shipping records not sent</string>
    <string name="id_box">Box</string>
    <string name="sent">Sent</string>
    <string name="devices_no_color_lku">Devices no color in Prime-Stock</string>
    <string name="devices_no_model_lku">Device no model in Prime-Stock</string>
    <string name="error_forgot_to_book">Error: You forgot to book the device or did not cancel the booking request</string>
    <string name="battery_contained">Battery contained</string>
    <string name="_false">False</string>
    <string name="_true">True</string>
    <string name="request_battery_contained_title">Battery contained?</string>
    <string name="battery_removable">Battery removable</string>
    <string name="request_battery_removable_title">Battery removable?</string>
    <string name="request">Request</string>
    <string name="result">Result</string>
    <string name="device">Device</string>
    <string name="backcover">Backcover</string>
    <string name="repair">Repair</string>
    <string name="defect_reuse">Defect - Reuse</string>
    <string name="interaction_simple_choice">Simple Choice</string>
    <string name="intact_reuse">Reuse</string>
    <string name="backcover_contained">Backcover contained</string>
    <string name="backcover_removable">Backcover removable</string>
    <string name="interaction_multiple_choice">Multiple Choice</string>
    <string name="not_repairable">Not repairable</string>
    <string name="damage_not_listed">Damage not listed</string>
    <string name="damage_overbroken">Overbroken</string>
    <string name="damaged">Damaged</string>
    <string name="repaired">Repaired</string>
    <string name="not_selected">Not selected</string>
    <string name="damages">Damages</string>
    <string name="no_damages_available">No damages available</string>
    <string name="handy">Handy</string>
    <string name="smartphone">Smartphone</string>
    <string name="typePhone">Phone-Type</string>
    <string name="overview">Overview</string>
    <string name="activity_battery">Battery</string>
    <string name="storage">Storage</string>
    <string name="main_storage">Main Storage</string>
    <string name="no_storage">No storage</string>
    <string name="no_more_storage">No more storage</string>
    <string name="reserve_storage">Reserve storage</string>
    <string name="apply">Apply</string>
    <string name="edit">Edit</string>
    <string name="hint_enter">Enter name...</string>
    <string name="battery_intact_and_contained">Battery intact and contained?</string>
    <string name="backcover_intact_and_contained">Backcover intact and contained?</string>
    <string name="battery_lku">Battery Lku</string>
    <string name="print_label">Print label</string>
    <string name="no_label_print_battery">No label print for battery</string>
    <string name="label_print_battery">Label print for battery</string>
    <string name="label_print_device">Label print for device</string>
    <string name="enter_name">Enter name...</string>
    <string name="interaction_title_select_device_battery">Select device battery</string>
    <string name="interaction_title_edit_model_battery">Edit model battery</string>
    <string name="disconnect">Disconnect</string>
    <string name="invalid_input">Invalid input</string>
    <string name="add_model">Add model</string>
    <string name="interaction_title_request_name_model">Request model</string>
    <string name="exploitation">Exploitation</string>
    <string name="request_name_battery">Request battery</string>
    <string name="tac">TAC</string>
    <string name="imei">IMEI</string>
    <string name="enter_scan_name_model">Enter or scan model name</string>
    <string name="enter_scan_id_model">Enter or scan model id</string>
    <string name="enter_scan_tac">Enter or scan TAC</string>
    <string name="enter_scan_imei">Enter or scan IMEI</string>
    <string name="enter_scan_id_device">Enter or scan device id</string>
    <string name="id_unknown">Id unknown</string>
    <string name="name_unknown">Name unknown</string>
    <string name="tac_unknown">Tac unknown</string>
    <string name="article">Article</string>
    <string name="reclean">Reclean</string>
    <string name="defect">Defect</string>
    <string name="book_into">Book into</string>
    <string name="book_into_and_print"><![CDATA[Book into & Print]]></string>
</resources>