<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="@dimen/item_height_default"
    android:id="@+id/llItem">

    <TextView
        android:id="@+id/tvManufacturer"
        style="@style/tv_itemRow"
        android:layout_weight="2"
        android:text="@string/manufacturer"/>

    <TextView
        android:id="@+id/tvModel"
        style="@style/tv_itemRow"
        android:layout_weight="2"
        android:text="@string/model_name"/>

    <TextView
        android:id="@+id/tvColorErp"
        style="@style/tv_itemRow"
        android:layout_weight="1"
        android:text="@string/color_erp"/>

    <TextView
        android:id="@+id/tvColorWawi"
        style="@style/tv_itemRow"
        android:layout_weight="2"
        android:text="@string/color_wawi"/>

</LinearLayout>