<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="top">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="@dimen/size_text_title"
        android:textColor="@color/color_white"
        android:gravity="center"
        android:text="@string/storage"
        android:background="@color/color_primary"
        android:layout_alignParentTop="true"
        android:id="@+id/tvHeader"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHeader"
        android:layout_above="@id/llButtons"
        android:id="@+id/rgStorageLevel"
        android:layout_margin="16dp"
        android:gravity="center_vertical">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbMainStorage"
            android:buttonTint="@color/color_green"
            android:text="@string/main_storage"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbReserveStorage"
            android:buttonTint="@color/color_grey"
            android:text="@string/reserve_storage"
            android:layout_marginTop="16dp"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbNoMoreStorage"
            android:buttonTint="@color/color_red"
            android:text="@string/no_more_storage"
            android:layout_marginTop="16dp"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbNoStorage"
            android:buttonTint="@color/color_black"
            android:text="@string/no_storage"
            android:layout_marginTop="16dp"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/llButtons">

        <Button
            style="@style/button_primary_one"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/bCancel"
            />

        <Button
            style="@style/button_primary_one"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:id="@+id/bApply"
            />

    </LinearLayout>



</LinearLayout>