<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="@dimen/item_height_one_row_text">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/tvIdModelColorShape"
        android:text="@string/id_model_color_shape"
        style="@style/tv_default"
        android:gravity="center"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/tvModel"
        android:text="@string/model"
        style="@style/tv_default"
        android:gravity="center"
        android:background="@color/color_grey_light"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/tvIdColor"
        android:text="@string/id_color"
        style="@style/tv_default"
        android:gravity="center"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/tvIdShape"
        android:text="@string/id_shape"
        style="@style/tv_default"
        android:gravity="center"
        android:background="@color/color_grey_light"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/tvRpd"
        android:text="@string/rpd"
        style="@style/tv_default"
        android:gravity="center"
        />

</LinearLayout>