<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        style="@style/button_default"
        android:layout_width="match_parent"
        android:id="@+id/bNewRedord"
        android:text="@string/new_record"
        />

    <Button
        style="@style/button_default"
        android:layout_width="match_parent"
        android:id="@+id/bExistingRecord"
        android:text="@string/existing_record"
        />

    <Button
        style="@style/button_default"
        android:layout_width="match_parent"
        android:id="@+id/bUnknownSource"
        android:text="@string/unknown_sourc"
        android:visibility="gone"
        />

</LinearLayout>