<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlMain">

    <LinearLayout
        android:id="@+id/llAction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lHeader"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/bCommit"
            style="@style/button_main_new"
            android:text="@string/book_into"
            android:visibility="visible" />

        <Button
            android:id="@+id/bCommitAndPrint"
            style="@style/button_sub_new"
            android:text="@string/book_into_and_print"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bReclean"
                style="@style/button_sub_error"
                android:text="@string/reclean"
                android:background="@drawable/background_rounded_corners_negative"
                android:layout_weight="1"
                android:layout_marginRight="6dp"/>
            <Button
                android:id="@+id/bDefect"
                style="@style/button_sub_error"
                android:text="@string/defect"
                android:background="@drawable/background_rounded_corners_negative"
                android:layout_weight="1"
                android:layout_marginLeft="6dp"/>
        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/lHeader"
        layout="@layout/layout_header" />

</RelativeLayout>